// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OperationGenerator > [DELETE] should generate with unknownType \`any\` 1`] = `
"import type { DeletePetPetidMutationResponse } from "./DeletePetPetid";



 export function DeletePetPetidMutationResponse(override?: NonNullable<Partial<DeletePetPetidMutationResponse>>): NonNullable<DeletePetPetidMutationResponse> {
    return undefined;
}
"
`;

exports[`OperationGenerator > [GET] should generate 1`] = `
"import { faker } from "@faker-js/faker";
import { Pets } from "./Pets";
import { Error } from "./Error";
import type { ListPets200, ListPetsError, ListPetsQueryParams, ListPetsQueryResponse } from "./ListPets";


/**
 * @description A paged array of pets
 */
export function ListPets200(override?: NonNullable<Partial<ListPets200>>): NonNullable<ListPets200> {
    return Pets(override);
}


/**
 * @description unexpected error
 */
export function ListPetsError(override?: NonNullable<Partial<ListPetsError>>): NonNullable<ListPetsError> {
    return Error(override);
}



 export function ListPetsQueryParams(override: NonNullable<Partial<ListPetsQueryParams>> = {}): NonNullable<ListPetsQueryParams> {
    return {
        ...{ "limit": faker.string.alpha() },
        ...override
    };
}


/**
 * @description A paged array of pets
 */
export function ListPetsQueryResponse(override?: NonNullable<Partial<ListPetsQueryResponse>>): NonNullable<ListPetsQueryResponse> {
    return Pets(override);
}
"
`;

exports[`OperationGenerator > [GET] should generate 2`] = `
"import { faker } from "@faker-js/faker";
import { Pet } from "./Pet";
import { Error } from "./Error";
import type { ShowPetById200, ShowPetByIdError, ShowPetByIdPathParams, ShowPetByIdQueryResponse } from "./ShowPetById";


/**
 * @description Expected response to a valid request
 */
export function ShowPetById200(override?: NonNullable<Partial<ShowPetById200>>): NonNullable<ShowPetById200> {
    return Pet(override);
}


/**
 * @description unexpected error
 */
export function ShowPetByIdError(override?: NonNullable<Partial<ShowPetByIdError>>): NonNullable<ShowPetByIdError> {
    return Error(override);
}



 export function ShowPetByIdPathParams(override: NonNullable<Partial<ShowPetByIdPathParams>> = {}): NonNullable<ShowPetByIdPathParams> {
    return {
        ...{ "petId": faker.string.alpha(), "testId": faker.string.alpha() },
        ...override
    };
}


/**
 * @description Expected response to a valid request
 */
export function ShowPetByIdQueryResponse(override?: NonNullable<Partial<ShowPetByIdQueryResponse>>): NonNullable<ShowPetByIdQueryResponse> {
    return Pet(override);
}
"
`;

exports[`OperationGenerator > [GET] should generate with seed \`[222]\` 1`] = `
"import { faker } from "@faker-js/faker";
import { Pets } from "./Pets";
import { Error } from "./Error";
import type { ListPets200, ListPetsError, ListPetsQueryParams, ListPetsQueryResponse } from "./ListPets";


/**
 * @description A paged array of pets
 */
export function ListPets200(override?: NonNullable<Partial<ListPets200>>): NonNullable<ListPets200> {
    faker.seed([222]);
    return Pets(override);
}


/**
 * @description unexpected error
 */
export function ListPetsError(override?: NonNullable<Partial<ListPetsError>>): NonNullable<ListPetsError> {
    faker.seed([222]);
    return Error(override);
}



 export function ListPetsQueryParams(override: NonNullable<Partial<ListPetsQueryParams>> = {}): NonNullable<ListPetsQueryParams> {
    faker.seed([222]);
    return {
        ...{ "limit": faker.string.alpha() },
        ...override
    };
}


/**
 * @description A paged array of pets
 */
export function ListPetsQueryResponse(override?: NonNullable<Partial<ListPetsQueryResponse>>): NonNullable<ListPetsQueryResponse> {
    faker.seed([222]);
    return Pets(override);
}
"
`;

exports[`OperationGenerator > [GET] should generate with seed \`[222]\` 2`] = `
"import { faker } from "@faker-js/faker";
import { Pet } from "./Pet";
import { Error } from "./Error";
import type { ShowPetById200, ShowPetByIdError, ShowPetByIdPathParams, ShowPetByIdQueryResponse } from "./ShowPetById";


/**
 * @description Expected response to a valid request
 */
export function ShowPetById200(override?: NonNullable<Partial<ShowPetById200>>): NonNullable<ShowPetById200> {
    faker.seed([222]);
    return Pet(override);
}


/**
 * @description unexpected error
 */
export function ShowPetByIdError(override?: NonNullable<Partial<ShowPetByIdError>>): NonNullable<ShowPetByIdError> {
    faker.seed([222]);
    return Error(override);
}



 export function ShowPetByIdPathParams(override: NonNullable<Partial<ShowPetByIdPathParams>> = {}): NonNullable<ShowPetByIdPathParams> {
    faker.seed([222]);
    return {
        ...{ "petId": faker.string.alpha(), "testId": faker.string.alpha() },
        ...override
    };
}


/**
 * @description Expected response to a valid request
 */
export function ShowPetByIdQueryResponse(override?: NonNullable<Partial<ShowPetByIdQueryResponse>>): NonNullable<ShowPetByIdQueryResponse> {
    faker.seed([222]);
    return Pet(override);
}
"
`;

exports[`OperationGenerator > [POST] should generate 1`] = `
"import { faker } from "@faker-js/faker";
import { Error } from "./Error";
import type { CreatePets201, CreatePetsError, CreatePetsMutationRequest, CreatePetsMutationResponse } from "./CreatePets";


/**
 * @description Null response
 */
export function CreatePets201(override?: NonNullable<Partial<CreatePets201>>): NonNullable<CreatePets201> {
    return undefined;
}


/**
 * @description unexpected error
 */
export function CreatePetsError(override?: NonNullable<Partial<CreatePetsError>>): NonNullable<CreatePetsError> {
    return Error(override);
}



 export function CreatePetsMutationRequest(override: NonNullable<Partial<CreatePetsMutationRequest>> = {}): NonNullable<CreatePetsMutationRequest> {
    return {
        ...{ "name": faker.string.alpha(), "tag": faker.string.alpha() },
        ...override
    };
}



 export function CreatePetsMutationResponse(override?: NonNullable<Partial<CreatePetsMutationResponse>>): NonNullable<CreatePetsMutationResponse> {
    return undefined;
}
"
`;
